--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90fcbb">  <td>20/07/18 22:32:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC1Test.TC1()[pri:0, instance:AllegroE2E.TC1Test@385e9564]">TC1</td> 
-  <td>main@594427726</td>   <td></td> </tr>
-<tr bgcolor="6be399">  <td>20/07/18 22:32:36</td>   <td>838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC2Test.TC2()[pri:0, instance:AllegroE2E.TC2Test@7a675056]">TC2</td> 
-  <td>main@594427726</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>20/07/18 22:32:35</td>   <td>-49</td> <td>&nbsp;</td><td title="&gt;&gt;TC1Test.config()[pri:0, instance:AllegroE2E.TC1Test@385e9564]">&gt;&gt;config</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@594427726</td>   <td></td> </tr>
-<tr bgcolor="6be399">  <td>20/07/18 22:32:36</td>   <td>823</td> <td>&nbsp;</td><td title="&gt;&gt;TC2Test.config()[pri:0, instance:AllegroE2E.TC2Test@7a675056]">&gt;&gt;config</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@594427726</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>20/07/18 22:32:35</td>   <td>25</td> <td>&nbsp;</td><td title="&lt;&lt;TC1Test.teardown()[pri:0, instance:AllegroE2E.TC1Test@385e9564]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="6be399">  <td>20/07/18 22:32:36</td>   <td>847</td> <td>&nbsp;</td><td title="&lt;&lt;TC2Test.teardown()[pri:0, instance:AllegroE2E.TC2Test@7a675056]">&lt;&lt;teardown</td> 
+<tr bgcolor="7a66ec">  <td>20/08/05 12:30:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainPageTest.TC1()[pri:0, instance:Tests.MainPageTest@3098cf3b]">TC1</td> 
+  <td>main@225344427</td>   <td></td> </tr>
+<tr bgcolor="7a66ec">  <td>20/08/05 12:30:09</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainPageTest.TC7()[pri:0, instance:Tests.MainPageTest@3098cf3b]">TC7</td> 
+  <td>main@225344427</td>   <td></td> </tr>
+<tr bgcolor="7a66ec">  <td>20/08/05 12:30:09</td>   <td>-71</td> <td>&nbsp;</td><td title="&gt;&gt;MainPageTest.config()[pri:0, instance:Tests.MainPageTest@3098cf3b]">&gt;&gt;config</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@225344427</td>   <td></td> </tr>
+<tr bgcolor="7a66ec">  <td>20/08/05 12:30:09</td>   <td>47</td> <td>&nbsp;</td><td title="&lt;&lt;MainPageTest.teardown()[pri:0, instance:Tests.MainPageTest@3098cf3b]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
